add main.common.js + support hybrid selection notes

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -145,6 +145,12 @@
               </div>
             </td>
           </tr>
+          <tr class='offload' style='display:none'>
+            <th class='text-center'>Note</th>
+            <td>
+              <div id='offloadops'>Dual backends selected, following ops were offloaded to <span id='nnbackend' class='ols'></span> from <span id='polyfillbackend' class='ols'></span>: </div> 
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -351,8 +357,9 @@
   <script src='../util/onnx/OnnxModelUtils.js'></script>
   <script src='../util/onnx/OnnxModelImporter.js'></script>
   <script src='utils.js'></script>
+  <script src='../static/js/main.common.js'></script>
   <script src='main.js'></script>
-  <script src='../static/js/uicommon.js'></script>
+  <script src='../static/js/ui.common.js'></script>
   <script src='ui.js'></script>
 </body>
 
