--- a/examples/index.html
+++ b/examples/index.html
@@ -436,7 +436,7 @@
   <script src='static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
   <script src='static/lib/superfish/superfish.min.js'></script>
   <script src='static/lib/stickyjs/sticky.js'></script>
-  <script src='static/js/uicommon.js'></script>
+  <script src='static/js/ui.common.js'></script>
 
 </body>
 
