--- a/examples/model.html
+++ b/examples/model.html
@@ -198,7 +198,7 @@
   <script src='static/lib/stickyjs/sticky.js'></script>
   <script src='../dist/webml-polyfill.js'></script>
   <script src='util/base.js'></script>
-  <script src='static/js/uicommon.js'></script>
+  <script src='static/js/ui.common.js'></script>
   <script src='static/js/model.js'></script>
 </body>
 
