--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -103,6 +103,12 @@
                 <div id='my-gui-container'></div>
             </td>
           </tr>
+          <tr class='offload' style='display:none'>
+              <th class='text-center'>Note</th>
+              <td>
+                <div id='offloadops'>Dual backends selected, following ops were offloaded to <span id='nnbackend' class='ols'></span> from <span id='polyfillbackend' class='ols'></span>: </div> 
+              </td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -286,8 +292,9 @@
   <script src='src/DrawOutputs.js'></script>
 
   <script src='utils.js'></script>
+  <script src='../static/js/main.common.js'></script>
   <script src='main.js'></script>
-  <script src='../static/js/uicommon.js'></script>
+  <script src='../static/js/ui.common.js'></script>
   <script src='ui.js'></script>
 </body>
 
