--- a/examples/index.html
+++ b/examples/index.html
@@ -62,12 +62,13 @@
 
       <nav id='nav-container'>
         <ul class='nav-menu'>
-          <li class='menu-has-children'><a href='index.html'>Examples</a>
+          <li class='menu-has-children'><a href='./'>Examples</a>
             <ul>
-              <li><a href='image_classification/index.html'>Image Classification</a></li>
-              <li><a href='object_detection/index.html'>Person/Object Detection</a></li>
-              <li><a href='semantic_segmentation/index.html'>Semantic Segmentation</a></li>
-              <li><a href='skeleton_detection/index.html'>Skeleton Detection</a></li>
+              <li><a href='image_classification/'>Image Classification</a></li>
+              <li><a href='object_detection/'>Person/Object Detection</a></li>
+              <li><a href='semantic_segmentation/'>Semantic Segmentation</a></li>
+              <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
+              <li><a href='super_resolution/'>Super Resolution</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -84,11 +85,11 @@
 
       <div class='row'>
 
-      <div class='examples-col col-lg-4 col-xs-12'>
+        <div class='examples-col col-lg-4 col-xs-12'>
           <div class='card card-block text-center'>
             <div>
               <div class='feature-icon'>
-                <a href='image_classification/index.html'>
+                <a href='image_classification/'>
                   <svg class='fa fa-image' aria-hidden='true' data-prefix='far' data-icon='image'
                     class='svg-inline--fa fa-image fa-w-16' role='img' viewBox='0 0 512 512'>
                     <path fill='currentColor'
@@ -100,7 +101,7 @@
             </div>
             <div>
               <h3>
-                <a href='image_classification/index.html'>Image Classification</a>
+                <a href='image_classification/'>Image Classification</a>
               </h3>
               <p>
                 Predicting a single label (or a distribution over labels as shown here to indicate our confidence) for
@@ -114,7 +115,7 @@
           <div class='card card-block text-center'>
             <div>
               <div class='feature-icon'>
-                <a href='object_detection/index.html'>
+                <a href='object_detection/'>
                   <svg aria-hidden='true' data-prefix='far' data-icon='object-group'
                     class='svg-inline--fa fa-object-group fa-w-16' role='img' viewBox='0 0 512 512'>
                     <path fill='currentColor'
@@ -126,7 +127,7 @@
             </div>
             <div>
               <h3>
-                <a href='object_detection/index.html'>Person/Object Detection</a>
+                <a href='object_detection/'>Person/Object Detection</a>
               </h3>
 
               <p>
@@ -152,7 +153,7 @@
             </div>
             <div>
               <h3>
-                <a href='semantic_segmentation/index.html'>Semantic Segmentation</a>
+                <a href='semantic_segmentation/'>Semantic Segmentation</a>
               </h3>
 
               <p>
@@ -167,7 +168,7 @@
           <div class='card card-block text-center'>
             <div>
               <div class='feature-icon'>
-                <a href='skeleton_detection/index.html'>
+                <a href='skeleton_detection/'>
                   <svg aria-hidden='true' data-prefix='fas' data-icon='child' class='svg-inline--fa fa-child fa-w-12'
                     role='img' viewBox='0 0 384 512'>
                     <path fill='currentColor'
@@ -179,7 +180,7 @@
             </div>
             <div>
               <h3>
-                <a href='skeleton_detection/index.html'>Skeleton Detection</a>
+                <a href='skeleton_detection/'>Skeleton Detection</a>
               </h3>
 
               <p>
@@ -209,7 +210,8 @@
                 Face Recognition
               </h3>
               <p>
-                <span class='wip'>WIP</span> Detecting faces of participants by using object detection and checks whether each face was present
+                <span class='wip'>WIP</span> Detecting faces of participants by using object detection and checks
+                whether each face was present
                 or not.
               </p>
             </div>
@@ -236,7 +238,8 @@
                 Facial Landmark Detection
               </h3>
               <p>
-                <span class='wip'>WIP</span> Detecting facial landmarks like eyes, nose, mouth, etc., which can be used for web-based try-on
+                <span class='wip'>WIP</span> Detecting facial landmarks like eyes, nose, mouth, etc., which can be used
+                for web-based try-on
                 simulator of online store.
               </p>
             </div>
@@ -272,21 +275,23 @@
           <div class='card card-block text-center'>
             <div>
               <div class='feature-icon disabled'>
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search-plus"
-                  class="svg-inline--fa fa-search-plus fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 512 512">
-                  <path fill="currentColor"
-                    d="M304 192v32c0 6.6-5.4 12-12 12h-56v56c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-56h-56c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h56v-56c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v56h56c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z">
-                  </path>
-                </svg>
+                <a href='super_resolution/'>
+                  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search-plus"
+                    class="svg-inline--fa fa-search-plus fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512">
+                    <path fill="currentColor"
+                      d="M304 192v32c0 6.6-5.4 12-12 12h-56v56c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-56h-56c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h56v-56c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v56h56c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z">
+                    </path>
+                  </svg>
+                </a>
               </div>
             </div>
             <div>
               <h3 class='disabled'>
-                Super Resolution
+                <a href='super_resolution/'>Super Resolution</a>
               </h3>
               <p>
-                <span class='wip'>WIP</span> Generating higher-resolution image or video frames to prevent degradation of the perceived image or
+                Generating higher-resolution image or video frames to prevent degradation of the perceived image or
                 video quality.
               </p>
             </div>
