--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -62,12 +62,13 @@
 
       <nav id='nav-container'>
         <ul class='nav-menu'>
-          <li class='menu-has-children'><a href='../index.html'>Examples</a>
+          <li class='menu-has-children'><a href='../'>Examples</a>
             <ul>
-              <li><a href='../image_classification/index.html'>Image Classification</a></li>
-              <li><a href='../object_detection/index.html'>Person/Object Detection</a></li>
-              <li><a href='../semantic_segmentation/index.html'>Semantic Segmentation</a></li>
-              <li><a href='../skeleton_detection/index.html'>Skeleton Detection</a></li>
+              <li><a href='../image_classification/'>Image Classification</a></li>
+              <li><a href='../object_detection/'>Person/Object Detection</a></li>
+              <li><a href='../semantic_segmentation/'>Semantic Segmentation</a></li>
+              <li><a href='../skeleton_detection/'>Skeleton Detection</a></li>
+              <li><a href='../super_resolution/'>Super Resolution</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
