[benchmark] Upgraded Benchmark test to support two quantized models:               SSD MobileNet v1 Quant (TFLite)               SSD MobileNet v2 Quant (TFLite)             Fixes #683

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -62,7 +62,9 @@
               <option value="inception_v2_onnx">Inception v2 (ONNX)</option>
               <option value="densenet_onnx">DenseNet (ONNX)</option>
               <option value="ssd_mobilenet_v1_tflite">SSD MobileNet v1 (TFLite)</option>
+              <option value="ssd_mobilenet_v1_quant_tflite">SSD MobileNet v1 Quant (TFLite)</option>
               <option value="ssd_mobilenet_v2_tflite">SSD MobileNet v2 (TFLite)</option>
+              <option value="ssd_mobilenet_v2_quant_tflite">SSD MobileNet v2 Quant (TFLite)</option>
               <option value="ssdlite_mobilenet_v2_tflite">SSDLite MobileNet v2 (TFLite)</option>
               <option value="tiny_yolov2_coco_tflite">Tiny Yolo v2 COCO (TFLite)</option>
               <option value="tiny_yolov2_voc_tflite">Tiny Yolo v2 VOC (TFLite)</option>
