[benchmark] Add another two quantized models into Benchmark test:             MobileNet v1 Quant (TFLite) / MobileNet v2 Quant (TFLite)

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -50,7 +50,9 @@
             <h4>Model</h4>
             <select id="modelName">
               <option value="mobilenet_v1_tflite" selected>Mobilenet v1 (TFLite)</option>
+              <option value="mobilenet_v1_quant_tflite" selected>Mobilenet v1 Quant (TFLite)</option>
               <option value="mobilenet_v2_tflite">Mobilenet v2 (TFLite)</option>
+              <option value="mobilenet_v2_quant_tflite" selected>Mobilenet v2 Quant (TFLite)</option>
               <option value="squeezenet_tflite">Squeezenet (TFLite)</option>
               <option value="inception_v3_tflite">Inception v3 (TFLite)</option>
               <option value="inception_v4_tflite">Inception v4 (TFLite)</option>
