--- a/examples/model.html
+++ b/examples/model.html
@@ -64,6 +64,7 @@
               <li><a href='object_detection/'>Person/Object Detection</a></li>
               <li><a href='semantic_segmentation/'>Semantic Segmentation</a></li>
               <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
+              <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
             </ul>
           </li>
@@ -161,6 +162,42 @@
           </tbody>
         </table>
       </div>
+
+      <h4 class='text-center'>
+          <a href='object_detection/'>Facial Landmark Detection</a>
+        </h4>
+        <div class="table-responsive">
+          <table id='modelcv-odf' class='modelcv table table-borderless table-hover'>
+            <caption>Face Detection - Computer Vision based models</caption>
+            <thead>
+              <tr>
+                <th scope='col'>Model</th>
+                <th scope='col'>Format</th>
+                <th scope='col'>Size</th>
+                <th scope='col'>Paper</th>
+                <th scope='col' title='Netron Model Visualizer'>Netron</th>
+                <th scope='col'>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+          <table id='modelcv-fld' class='modelcv table table-borderless table-hover'>
+              <caption>Facial Landmark Detection - Computer Vision based models</caption>
+              <thead>
+                <tr>
+                  <th scope='col'>Model</th>
+                  <th scope='col'>Format</th>
+                  <th scope='col'>Size</th>
+                  <th scope='col'>Paper</th>
+                  <th scope='col' title='Netron Model Visualizer'>Netron</th>
+                  <th scope='col'>Description</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+        </div>
 
       <h4 class='text-center'>
         <a href='super_resolution/'>Super Resolution</a>
