[example] Fix some MS Edge compatibility issues

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
   <header id='header'>
     <div class='container'>
       <div id='logo' class='pull-left'>
-        <a href='index.html'>
+        <a href='index.html' id='logo'>
           <svg preserveAspectRatio='xMidYMid meet'
             viewBox='-1.2596205660195778 -1.002390572390567 185.26504164633673 39.987210231814544' width='181.27'
             height='35.99'>
@@ -425,6 +425,7 @@
           <p>&copy;2019 <a href='index.html'>WebNN API</a></p>
         </div>
       </div>
+    </div>
   </footer>
 
   <a href='https://github.com/intel/webml-polyfill/' class='github-corner' aria-label='View source on GitHub'>
