--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -34,7 +34,7 @@
   <header id='header'>
     <div class='container'>
       <div id='logo' class='pull-left'>
-        <a href='../index.html'>
+        <a href='../index.html' id='logo'>
           <svg preserveAspectRatio='xMidYMid meet' viewBox='-1.2596205660195778 -1.002390572390567 185.26504164633673 39.987210231814544'
             width='181.27' height='35.99'>
             <defs>
@@ -253,6 +253,7 @@
           <p>&copy;2019 <a href='../index.html'>WebNN API</a></p>
         </div>
       </div>
+    </div>
   </footer>
 
   <div id='overlay'></div>
