--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -129,22 +129,18 @@
               <div class='g b-polyfill'>
                 <span>Polyfill</span>
                 <input type='radio' name='bp' class='d-none' id='WASM' value='WASM'>
-                <label id='l-WASM' for='WASM'
-                  title='Compiled Tensorflow Lite C++ kernels to WebAssembly format'>WASM</label>
+                <label id='l-WASM' for='WASM'>WASM</label>
                 <input type='radio' name='bp' class='d-none' id='WebGL' value='WebGL'>
-                <label id='l-WebGL' for='WebGL' title='Tensorflow.js WebGL kernel'>WebGL</label>
+                <label id='l-WebGL' for='WebGL'>WebGL</label>
               </div>
               <div class='g b-webnn'>
                 <span>WebNN</span>
                 <input type='radio' name='bw' class='d-none' id='fast' value='fast'>
-                <label id='l-fast' for='fast' class='lml'
-                  title='Returning a single answer as fast as possible, even if this causes more power consumption.'>FAST_SINGLE_ANSWER</label>
+                <label id='l-fast' for='fast' class='lml'>FAST_SINGLE_ANSWER</label>
                 <input type='radio' name='bw' class='d-none' id='sustained' value='sustained'>
-                <label id='l-sustained' for='sustained' class='lml'
-                  title='Maximizing the throughput of successive frames, for example when processing successive frames coming from the camera.'>SUSTAINED_SPEED</label>
+                <label id='l-sustained' for='sustained' class='lml'>SUSTAINED_SPEED</label>
                 <input type='radio' name='bw' class='d-none' id='low' value='low'>
-                <label id='l-low' for='low' class='lml'
-                  title='Executing in a way that minimizes battery drain.'>LOW_POWER</label>
+                <label id='l-low' for='low' class='lml'>LOW_POWER</label>
               </div>
             </td>
           </tr>
@@ -326,7 +322,7 @@
         <label for='input'><svg width='20' height='17' viewBox='0 0 20 17'>
             <path
               d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
-            </svg>
+          </svg>
           <span>Pick Image</span>
         </label>
       </div>
@@ -380,6 +376,26 @@
       </path>
     </svg>
   </a>
+
+  <div class="modal fade" id="subgraphModal" tabindex="-1" role="dialog" aria-labelledby="subgraphModalTitle"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modaltitle">Subgraphs Summary</h5>
+        </div>
+        <div class="modal-body">
+          <div id="timeline">
+            <ul class="timeline" id="subgraph">
+            </ul>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="modal-btn" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src='../static/lib/jquery/jquery.min.js'></script>
   <script src='../static/lib/jquery/jquery-migrate-3.0.1.min.js'></script>
