[Example] Update UE when switching dual backends

--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -124,17 +124,17 @@
             </td>
           </tr>
           <tr class='backend'>
-            <th class='text-center'>Backend</th>
+            <th class='text-center backendtitle'>Backend</th>
             <td>
               <div class='g b-polyfill'>
-                <span>Polyfill</span>
+                <span id='backendpolyfilltitle'>Polyfill</span>
                 <input type='radio' name='bp' class='d-none' id='WASM' value='WASM'>
                 <label id='l-WASM' for='WASM'>WASM</label>
                 <input type='radio' name='bp' class='d-none' id='WebGL' value='WebGL'>
                 <label id='l-WebGL' for='WebGL'>WebGL</label>
               </div>
               <div class='g b-webnn'>
-                <span>WebNN</span>
+                <span id='backendwebnntitle'>WebNN</span>
                 <input type='radio' name='bw' class='d-none' id='fast' value='fast'>
                 <label id='l-fast' for='fast' class='lml'>FAST_SINGLE_ANSWER</label>
                 <input type='radio' name='bw' class='d-none' id='sustained' value='sustained'>
