[Example] Add dual/single backends switch

--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -152,6 +152,10 @@
           <tr class='backend'>
             <th class='text-center backendtitle'>Backend</th>
             <td>
+              <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="backendswitch">
+                  <label class="custom-control-label" for="backendswitch">Dual</label>
+              </div>
               <div class='g b-polyfill'>
                 <span id='backendpolyfilltitle'>Polyfill</span>
                 <input type='radio' name='bp' class='d-none' id='WASM' value='WASM'>
