Add switch control for posenet

--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -83,7 +83,7 @@
       <table id='filter' class='t-filter table table-condensed'>
         <tbody>
           <tr class='backend'>
-            <th class='text-center backendtitle' id='backendtitle'>Backend</th>
+            <th class='text-center backendtitle'>Backend</th>
             <td>
               <div class='custom-control custom-switch'>
                   <input type='checkbox' class='custom-control-input' id='backendswitch'>
