--- a/test/realmodel/index.html
+++ b/test/realmodel/index.html
@@ -44,6 +44,26 @@
         a.dispatchEvent(e)
       }
 
+
+      async function downloadjson(data, filename) {
+        if (!data) {
+          console.error("downloadjson: No data");
+          return;
+        }
+        if (!filename) filename = "casePrototypeData.json";
+        if (typeof data === "object") {
+          data = JSON.stringify(data);
+        }
+        var blob = new Blob([data], {type: 'text/json'}),
+            e = document.createEvent('MouseEvents'),
+            a = document.createElement('a');
+        a.download = filename;
+        a.href = window.URL.createObjectURL(blob);
+        a.dataset.downloadurl = ['text/json', a.download, a.href].join(':');
+        e.initMouseEvent('click', true, false, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+        a.dispatchEvent(e)
+      }
+
       async function loadTensor(tensorFile) {
         let result = await loadUrl(tensorFile);
         if (onnx.TensorProto.verify(result))
@@ -57,12 +77,11 @@
       }
       
       let modelName;
-      let Backend;
+      let Backend = 'WASM';     
       await fetch('./config.json').then((res) => {
         return res.json();
       }).then((text) => {
         modelName = text.modelName;
-        Backend = text.backend;
       });
       const modelFile = `./model/${modelName}/${modelName}.onnx`;
       let input = await loadTensor(`./model/${modelName}/test_data_set_1/input_0.pb`);
