[Example] Code Refactor and UI update for Emotion Analysis

--- a/examples/index.html
+++ b/examples/index.html
@@ -70,6 +70,7 @@
               <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
+              <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -278,7 +279,7 @@
         <div class='examples-col col-lg-4 col-xs-12'>
           <div class='card card-block text-center'>
             <div>
-              <div class='feature-icon disabled'>
+              <div class='feature-icon'>
                 <a href='super_resolution/'>
                   <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search-plus"
                     class="svg-inline--fa fa-search-plus fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -357,21 +358,20 @@
         <div class='examples-col col-lg-4 col-xs-12'>
           <div class='card card-block text-center'>
             <div>
-              <div class='feature-icon disabled'>
-                <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="grin"
-                  class="svg-inline--fa fa-grin fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 496 512">
-                  <path fill="currentColor"
-                    d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm105.6-151.4c-25.9 8.3-64.4 13.1-105.6 13.1s-79.6-4.8-105.6-13.1c-9.9-3.1-19.4 5.4-17.7 15.3 7.9 47.1 71.3 80 123.3 80s115.3-32.9 123.3-80c1.6-9.8-7.7-18.4-17.7-15.3zM168 240c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32z">
-                  </path>
-                </svg>
+              <div class='feature-icon'>
+                <a href='emotion_analysis/'>
+                  <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="grin"
+                    class="svg-inline--fa fa-grin fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 496 512">
+                    <path fill="currentColor"
+                      d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm105.6-151.4c-25.9 8.3-64.4 13.1-105.6 13.1s-79.6-4.8-105.6-13.1c-9.9-3.1-19.4 5.4-17.7 15.3 7.9 47.1 71.3 80 123.3 80s115.3-32.9 123.3-80c1.6-9.8-7.7-18.4-17.7-15.3zM168 240c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32z">
+                    </path>
+                  </svg>
+                </a>
               </div>
             </div>
-            <div class='disabled'>
-              <h3>
-                Emotion Analysis
-              </h3>
-
+            <div>
+              <h3><a href='emotion_analysis/'>Emotion Analysis</a></h3>
               <p>
                 Analysing and inferring emotion from input text, and displaying an emoji that represents the estimated
                 emotion.
