--- a/examples/model.html
+++ b/examples/model.html
@@ -66,6 +66,7 @@
               <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
+              <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -164,7 +165,7 @@
       </div>
 
       <h4 class='text-center'>
-          <a href='object_detection/'>Facial Landmark Detection</a>
+          <a href='object_detection/'>Face Detection</a>
         </h4>
         <div class="table-responsive">
           <table id='modelcv-odf' class='modelcv table table-borderless table-hover'>
@@ -183,7 +184,22 @@
             </tbody>
           </table>
           <table id='modelcv-fld' class='modelcv table table-borderless table-hover'>
-              <caption>Facial Landmark Detection - Computer Vision based models</caption>
+            <caption>Facial Landmark Detection - Computer Vision based models</caption>
+            <thead>
+              <tr>
+                <th scope='col'>Model</th>
+                <th scope='col'>Format</th>
+                <th scope='col'>Size</th>
+                <th scope='col'>Paper</th>
+                <th scope='col' title='Netron Model Visualizer'>Netron</th>
+                <th scope='col'>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+          <table id='modelcv-ea' class='modelcv table table-borderless table-hover'>
+              <caption>Emotion Analysis - Computer Vision based models</caption>
               <thead>
                 <tr>
                   <th scope='col'>Model</th>
