--- a/examples/facial_landmark_detection/index.html
+++ b/examples/facial_landmark_detection/index.html
@@ -70,6 +70,7 @@
               <li><a href='../skeleton_detection/'>Skeleton Detection</a></li>
               <li><a href='../facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='../super_resolution/'>Super Resolution</a></li>
+              <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
