[Example] Supporting front-facing and rear cameras

--- a/examples/emotion_analysis/index.html
+++ b/examples/emotion_analysis/index.html
@@ -149,7 +149,7 @@
     <div class='container' id='container'>
       <a id='extra' href='#' class='mb-1 mt-3'>
         <h3 class='text-center ex' id='ictitle'>
-          Facial Landmark Detection
+          Emotion Analysis
         </h3>
         <span class='fa chevron-up'>
           <svg aria-hidden='true' data-prefix='fas' data-icon='chevron-up' class='svg-inline--fa fa-chevron-up fa-w-14'
@@ -266,6 +266,10 @@
                   </path>
                 </svg>
               </i>
+              <div id='cameraswitcher' class='custom-control custom-switch'>
+                <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+                <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+              </div>
             </div>
           </div>
         </div>
