--- a/examples/object_detection/index.html
+++ b/examples/object_detection/index.html
@@ -275,6 +275,10 @@
                 </svg>
               </i>
             </div>
+            <div id='cameraswitcher' class='custom-control custom-switch'>
+                <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+                <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+            </div>
           </div>
         </div>
       </div>
