--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -248,6 +248,10 @@
             </i>
           </div>
           <canvas id='canvasvideo'></canvas>
+          <div id='cameraswitcher' class='custom-control custom-switch'>
+              <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+              <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+          </div>
         </div>
         <div id='inference' class='shoulddisplay col-sm' style='display: none;'>
           <div class='row text-center tc' id='inferencetitle'>
