--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -252,6 +252,10 @@
             </div>
             <video id='video' autoplay playsinline hidden></video>
             <canvas hidden id='scalevideo' width='640' height='480'></canvas>
+            <div id='cameraswitcher' class='custom-control custom-switch'>
+                <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+                <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+            </div>
           </div>
         </div>
       </div>
