--- a/examples/facial_landmark_detection/index.html
+++ b/examples/facial_landmark_detection/index.html
@@ -266,6 +266,10 @@
                   </path>
                 </svg>
               </i>
+              <div id='cameraswitcher' class='custom-control custom-switch'>
+                <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+                <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+              </div>
             </div>
           </div>
         </div>
