--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -338,6 +338,10 @@
               </tbody>
             </table>
           </div>
+          <div id='cameraswitcher' class='custom-control custom-switch'>
+              <input type='checkbox' class='custom-control-input' id='cameraswitch'>
+              <label class='custom-control-label' for='cameraswitch'>Front-facing</label>
+          </div>
         </div>
       </div>
     </div>
